# internal/http/routes/route.go
@@ -6,6 +6,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// PingExample godoc
+// @Summary ping example
+// @Schemes
+// @Description do ping
+// @Tags example
+// @Accept json
+// @Produce json
+// @Success 200 {string} Helloworld
+// @Router /example/helloworld [get]
 func RootHandler(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, map[string]interface{}{
 		"status":  true,
